[package]
name = "x64asm"
description = "Library to write x64 Assembly code from Rust, more properly"
authors = ["Antonin Hérault <antonherault@gmail.com>"]
repository = "https://github.com/antoninhrlt/x64asm/"
readme = "README.md"
keywords = ["assembly", "asm", "x64", "x86_64", "library"]
license = "MIT"
version = "0.1.2"
edition = "2021"

[dependencies]
